clusters/talos-cluster/radarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    pod-security.kubernetes.io/enforce: privileged
