clusters/talos-cluster/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-deployment
  namespace: radarr
  labels:
    app: radarr-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: radarr-deployment
  template:
    metadata:
      name: radarr-deployment
      labels:
        app: radarr-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.3.0@sha256:e35056574cdc695a9ee745aa1ecda9eab3842450bf4b7b8471b023790fa3861d
          imagePullPolicy: Always
          ports:
            - containerPort: 7878
              name: radarr
              protocol: TCP
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: radarr-media
              mountPath: /media
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-data
        - name: radarr-media
          persistentVolumeClaim:
            claimName: radarr-media
