clusters/talos-cluster/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: radarr
spec:
  selector:
    app: radarr-deployment
  ports:
    - name: shadowsocks-tcp
      protocol: TCP
      port: 8388
    - name: shadowsocks-udp
      protocol: UDP
      port: 8388
    - name: radarr
      protocol: TCP
      port: 7878
