clusters/talos-cluster/radarr/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-route
  namespace: radarr
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "radarr.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr-service
          port: 7878
